--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -1,6 +1,100 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "0d8188a3-9bdf-440c-9205-cc49ddd0a9e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_io.TextIOWrapper name='/Users/ryanmckinney/Downloads/position_injury_player_2019_2020_fixed (3).csv' mode='r' encoding='UTF-8'>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "open('/Users/ryanmckinney/Downloads/position_injury_player_2019_2020_fixed (3).csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "2ae934bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_data():\n",
+    "    data_list = []\n",
+    "    for line in open('/Users/ryanmckinney/Downloads/position_injury_player_2019_2020_fixed (3).csv'):\n",
+    "        line_cleaned = line.strip()\n",
+    "        list_cleaned = line_cleaned.split(',')\n",
+    "        data_list.append(list_cleaned)\n",
+    "    return data_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "45b5ddc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "37"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = load_data()\n",
+    "def counting_injuries(data, team):\n",
+    "    count = 0\n",
+    "    for line in data:\n",
+    "        if line[24] == team:\n",
+    "            count += 1\n",
+    "    return count\n",
+    "\n",
+    "counting_injuries(data, \"ARI\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5241fda2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
