--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -2,35 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "0d8188a3-9bdf-440c-9205-cc49ddd0a9e7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<_io.TextIOWrapper name='/Users/ryanmckinney/Downloads/position_injury_player_2019_2020_fixed (3).csv' mode='r' encoding='UTF-8'>"
+       "<_io.TextIOWrapper name='position_injury_player_2019_2020_fixed.csv' mode='r' encoding='UTF-8'>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "open('/Users/ryanmckinney/Downloads/position_injury_player_2019_2020_fixed (3).csv')"
+    "open('position_injury_player_2019_2020_fixed.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "2ae934bc",
    "metadata": {},
    "outputs": [],
    "source": [
     "def load_data():\n",
     "    data_list = []\n",
-    "    for line in open('/Users/ryanmckinney/Downloads/position_injury_player_2019_2020_fixed (3).csv'):\n",
+    "    for line in open('position_injury_player_2019_2020_fixed.csv'):\n",
     "        line_cleaned = line.strip()\n",
     "        list_cleaned = line_cleaned.split(',')\n",
     "        data_list.append(list_cleaned)\n",
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "45b5ddc4",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
        "37"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
